--- a/app/.gitignore
+++ b/app/.gitignore
@@ -19,3 +19,13 @@
 /node_modules/
 /public/build/
 ###< pentatrion/vite-bundle ###
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
