--- a/app/composer.json
+++ b/app/composer.json
@@ -7,18 +7,18 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/core": "^3.3",
+        "dcorroyer/my-rest-bundle": "dev-dev",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
+        "ergebnis/phpunit-slow-test-detector": "^2.15",
         "lexik/jwt-authentication-bundle": "^3.0",
         "nelmio/cors-bundle": "^2.4",
         "nesbot/carbon": "^3.7",
         "pentatrion/vite-bundle": "^6.4",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
-        "rekalogika/api-lite": "^0.7.2",
         "symfony/asset": "~7.1.0",
         "symfony/console": "~7.1.0",
         "symfony/dotenv": "~7.1.0",
@@ -38,8 +38,12 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.6",
         "ergebnis/composer-normalize": "^2.43",
+        "phpunit/phpunit": "^10.0",
         "roave/security-advisories": "dev-latest",
+        "symfony/browser-kit": "7.1.*",
+        "symfony/css-selector": "7.1.*",
         "symfony/maker-bundle": "^1.60",
+        "symfony/phpunit-bridge": "^7.1",
         "symfony/stopwatch": "~7.1.0",
         "symfony/web-profiler-bundle": "~7.1.0",
         "zenstruck/foundry": "^2.0"
