--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -1,3 +1,15 @@
+controllers:
+  resource:
+    path: ../src/Controller/
+    namespace: App\Controller
+  type: attribute
+  prefix: /api
+
+api.swagger_ui:
+  path: /api/docs
+  methods: GET
+  defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
+
 api_login_check:
   path: /api/login
 
