--- a/app/composer.json
+++ b/app/composer.json
@@ -40,8 +40,8 @@
         "ergebnis/composer-normalize": "^2.43",
         "phpunit/phpunit": "^10.0",
         "roave/security-advisories": "dev-latest",
-        "symfony/browser-kit": "7.1.*",
-        "symfony/css-selector": "7.1.*",
+        "symfony/browser-kit": "~7.1.0",
+        "symfony/css-selector": "~7.1.0",
         "symfony/maker-bundle": "^1.60",
         "symfony/phpunit-bridge": "^7.1",
         "symfony/stopwatch": "~7.1.0",
