--- a/app/.env
+++ b/app/.env
@@ -1,5 +1,6 @@
 APP_ENV=dev
 APP_SECRET=87663a160e4f100c7b3d6ab84950f8eb
+TRUSTED_PROXIES=127.0.0.1,REMOTE_ADDR
 DATABASE_URL="postgresql://root:root@database:5432/app?serverVersion=16&charset=utf8"
 HTTPS=on
 
