--- a/app/package.json
+++ b/app/package.json
@@ -9,44 +9,45 @@
     "format": "prettier --write 'assets/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.3",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-react-refresh": "^0.4.12",
     "prettier": "3.3.2",
-    "typescript": "^5.2.2"
+    "typescript": "5.5.4"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@mantine/core": "^7.11.1",
-    "@mantine/dates": "^7.12.2",
-    "@mantine/form": "^7.11.1",
-    "@mantine/hooks": "^7.11.2",
-    "@mantine/notifications": "^7.11.1",
-    "@tabler/icons-react": "^3.10.0",
-    "@tanstack/react-query": "^5.51.11",
-    "@tanstack/react-query-devtools": "^5.51.21",
-    "@tanstack/react-router": "^1.46.8",
-    "@tanstack/router": "^0.0.1-beta.53",
-    "@tanstack/router-vite-plugin": "^1.46.6",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@mantine/core": "^7.13.1",
+    "@mantine/dates": "^7.13.1",
+    "@mantine/form": "^7.13.1",
+    "@mantine/hooks": "^7.13.1",
+    "@mantine/notifications": "^7.13.1",
+    "@tabler/icons-react": "^3.19.0",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query-devtools": "^5.58.0",
+    "@tanstack/react-router": "^1.58.15",
+    "@tanstack/router": "0.0.1-beta.53",
+    "@tanstack/router-vite-plugin": "^1.58.12",
+    "@typescript-eslint/typescript-estree": "^8.7.0",
+    "@vitejs/plugin-react": "^4.3.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "postcss": "^8.4.39",
-    "postcss-preset-mantine": "^1.15.0",
+    "postcss": "^8.4.47",
+    "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.1",
-    "vite": "^5.0",
-    "vite-plugin-symfony": "^6.4",
+    "react-hook-form": "^7.53.0",
+    "vite": "^5.4.8",
+    "vite-plugin-symfony": "^6.5.3",
     "zod": "^3.23.8"
   },
   "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
