--- a/app/tsconfig.node.json
+++ b/app/tsconfig.node.json
@@ -7,7 +7,5 @@
     "allowSyntheticDefaultImports": true,
     "strict": true
   },
-  "include": [
-    "vite.config.js"
-  ]
+  "include": ["vite.config.js"]
 }
