--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/typescript-estree": "^8.7.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
@@ -33,10 +34,6 @@
     "@tabler/icons-react": "^3.19.0",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.58.0",
-    "@tanstack/react-router": "^1.58.15",
-    "@tanstack/router": "0.0.1-beta.53",
-    "@tanstack/router-vite-plugin": "^1.58.12",
-    "@typescript-eslint/typescript-estree": "^8.7.0",
     "@vitejs/plugin-react": "^4.3.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
@@ -46,6 +43,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-router-dom": "^6.26.2",
     "vite": "^5.4.8",
     "vite-plugin-symfony": "^6.5.3",
     "zod": "^3.23.8"
