--- a/app/package.json
+++ b/app/package.json
@@ -31,7 +31,7 @@
     "@mantine/form": "^7.13.1",
     "@mantine/hooks": "^7.13.1",
     "@mantine/notifications": "^7.13.1",
-    "@tabler/icons-react": "^3.19.0",
+    "@tabler/icons-react": "3.13.0",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-query-devtools": "^5.59.0",
     "@vitejs/plugin-react": "^4.3.2",
