--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -43,7 +43,8 @@
             <directory suffix=".php">src/Dto</directory>
             <directory suffix=".php">src/Serializable</directory>
             <directory suffix=".php">src/DataFixtures</directory>
-            <directory suffix=".php">src/Kernel.php</directory>
+            <directory suffix=".php">src/Entity</directory>
+            <file>src/Kernel.php</file>
         </exclude>
 
     </source>
