--- a/app/package.json
+++ b/app/package.json
@@ -43,6 +43,7 @@
     "postcss-simple-vars": "^7.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^5.1.0",
     "react-router-dom": "^6.26.2",
     "vite": "^5.4.8",
     "vite-plugin-symfony": "^6.5.3",
