--- a/app/composer.json
+++ b/app/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^3.2",
         "ergebnis/phpunit-slow-test-detector": "^2.15",
         "lexik/jwt-authentication-bundle": "^3.0",
+        "loophp/collection": "^7.6",
         "nelmio/cors-bundle": "^2.4",
         "nesbot/carbon": "^3.7",
         "pentatrion/vite-bundle": "^6.4",
