--- a/app/package.json
+++ b/app/package.json
@@ -9,43 +9,45 @@
     "format": "prettier --write 'assets/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "devDependencies": {
-    "@types/node": "^22.7.6",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
-    "@typescript-eslint/typescript-estree": "^8.8.0",
+    "@types/node": "^22.10.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/typescript-estree": "^8.16.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.12",
+    "eslint-plugin-react-refresh": "^0.4.14",
     "prettier": "3.3.2",
     "typescript": "5.5.4"
   },
   "dependencies": {
-    "@mantine/core": "^7.13.1",
-    "@mantine/dates": "^7.13.1",
-    "@mantine/form": "^7.13.1",
-    "@mantine/hooks": "^7.13.1",
-    "@mantine/notifications": "^7.13.1",
+    "@mantine/charts": "^7.14.2",
+    "@mantine/core": "^7.14.2",
+    "@mantine/dates": "^7.14.2",
+    "@mantine/form": "^7.14.2",
+    "@mantine/hooks": "^7.14.2",
+    "@mantine/notifications": "^7.14.2",
     "@tabler/icons-react": "3.13.0",
-    "@tanstack/react-query": "^5.59.0",
-    "@tanstack/react-query-devtools": "^5.59.0",
-    "@vitejs/plugin-react": "^4.3.2",
+    "@tanstack/react-query": "^5.61.4",
+    "@tanstack/react-query-devtools": "^5.61.4",
+    "@vitejs/plugin-react": "^4.3.4",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "mantine-form-zod-resolver": "^1.1.0",
-    "postcss": "^8.4.47",
+    "postcss": "^8.4.49",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-google-charts": "^5.1.0",
-    "react-router-dom": "^6.26.2",
-    "vite": "^5.4.8",
+    "react-google-charts": "^5.2.1",
+    "react-router-dom": "^6.28.0",
+    "recharts": "^2.13.3",
+    "vite": "^5.4.11",
     "vite-plugin-symfony": "^6.5.3",
     "zod": "^3.23.8"
   },
