--- a/app/composer.json
+++ b/app/composer.json
@@ -7,14 +7,15 @@
         "php": ">=8.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "dcorroyer/my-rest-bundle": "dev-dev",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
         "ergebnis/phpunit-slow-test-detector": "^2.15",
+        "knplabs/knp-paginator-bundle": "^6.6",
         "lexik/jwt-authentication-bundle": "^3.0",
         "loophp/collection": "^7.6",
+        "nelmio/api-doc-bundle": "^4.33",
         "nelmio/cors-bundle": "^2.4",
         "nesbot/carbon": "^3.7",
         "pentatrion/vite-bundle": "^6.4",
@@ -48,7 +49,7 @@
         "symfony/phpunit-bridge": "^7.1",
         "symfony/stopwatch": "~7.1.0",
         "symfony/web-profiler-bundle": "~7.1.0",
-        "zenstruck/foundry": "^2.0"
+        "zenstruck/foundry": "^2.3"
     },
     "replace": {
         "symfony/polyfill-ctype": "*",
