--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -40,12 +40,12 @@
             <directory suffix=".php">src</directory>
         </include>
         <exclude>
-            <directory suffix=".php">src/Dto</directory>
-            <directory suffix=".php">src/Serializable</directory>
-            <directory suffix=".php">src/DataFixtures</directory>
-            <directory suffix=".php">src/Entity</directory>
-            <directory suffix=".php">src/Enum</directory>
-            <directory suffix=".php">src/Security</directory>
+            <directory suffix=".php">src/*/Dto</directory>
+            <directory suffix=".php">src/*/DataFixtures</directory>
+            <directory suffix=".php">src/*/Entity</directory>
+            <directory suffix=".php">src/*/Enum</directory>
+            <directory suffix=".php">src/*/Security</directory>
+            <directory suffix=".php">src/Core</directory>
             <file>src/Kernel.php</file>
         </exclude>
 
