--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^17.0.0",
     "@mantine/charts": "^7.14.2",
     "@mantine/core": "^7.14.2",
     "@mantine/dates": "^7.14.2",
